fix x axis alignment

--- a/panoctagon/assets/css/style.css
+++ b/panoctagon/assets/css/style.css
@@ -225,7 +225,7 @@ svg.main-svg {
     border-radius: 0 !important;
     font-size: 14px !important;
     margin-bottom: 0 !important;
-    margin-left: 10px !important;
+    margin-left: 66px !important;
     display: inline-block !important;
 }
 
